Adding routings (WIP: Might not work)

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,7 +29,7 @@
   <!-- Middle: Logo + Search -->
   <div class="flex items-center gap-4 flex-1 mx-4">
     <a href="/" class="flex items-center gap-2">
-      <img src="{% static 'static/images/logo-smash.png' %}" alt="Smash Logo" class="h-8 w-auto" />
+      <img src="{% static 'images/logo-smash.png' %}" alt="Smash Logo" class="h-8 w-auto" />
       <span class="font-bold text-xl text-purple-700">Smash!</span>
     </a>
 
