--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,3 +1,11 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block meta %}
+<title>Smash!</title>
+{% endblock meta %}
+
+{% block content %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -175,3 +183,5 @@
     </script>
   </body>
 </html>
+
+{% endblock content %}
