--- a/profil/templates/edit_profile.html
+++ b/profil/templates/edit_profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>Edit News - Football News</title>
+<title>Edit Profile - Smash</title>
 {% endblock meta %}
 
 {% block content %}
